[tool.poetry]
name = "nova-flavors"
version = "0.0.1"
description = "Monitors FlavorSpec repository and reconciles it with Nova"
authors = ["Marek Skrobacki <marek.skrobacki@rackspace.co.uk>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "nova_flavors" }
]

[tool.poetry.dependencies]
python = "^3.11"
understack-flavor-matcher = {path = "../../python/understack-flavor-matcher"}
python-novaclient = "^18.7.0"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-github-actions-annotate-failures = "*"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=nova_flavors"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "S",       # flake8-bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # allow 'assert' for pytest
    "S105",     # allow hardcoded passwords for testing
    "S106",     # allow hardcoded passwords for testing
]
[tool.isort]
profile = "open_stack"

[tool.poetry.scripts]
nova-flavors-sync = "nova_flavors.reconcile:main"
