[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinder-understack"
version = "0.1.0"
description = "Cinder driver package for UnderStack"
authors = [{ name = "Understack Developers" }]
requires-python = "~=3.10"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: OpenStack",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
  "cinder>=25.0.0,<26",
  "oslo.utils>=6.0.0,<8"
]

[project.urls]
Source = "https://github.com/rackerlabs/understack"

[dependency-groups]
test = [
    "ddt>=1.4.4",
    "fixtures>=3.0.0",
    "stestr>=3.2.1",
 ]

[tool.uv]
default-groups = ["test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"
