[tool.poetry]
name = "diff-nautobot-understack"
version = "0.0.0"
authors = ["Understack Developers"]
description = "tool to compare data between Openstack and Nautobot"
readme = "README.md"
packages = [{include = "diff_nautobot_understack"}]

[tool.poetry.dependencies]
python = "^3.10"
openstacksdk = "^4.2.0"
keystoneauth-websso = "^0.2.0"
diffsync = "^2.0.1"
typer = "^0.15.1"
pydantic-settings = "^2.7.1"

[tool.poetry.scripts]
uc-diff = "diff_nautobot_understack.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
