[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "diff-nautobot-understack"
description = "tool to compare data between Openstack and Nautobot"
authors = [{ name = "Understack Developers" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openstacksdk>=4.2.0,<5",
    "keystoneauth-websso>=0.2.0,<0.3",
    "diffsync>=2.0.1,<3",
    "typer>=0.15.1,<0.16",
    "pydantic-settings>=2.7.1,<3",
]
license = {text="Apache-2.0"}
dynamic = ["version"]

[project.scripts]
uc-diff = "diff_nautobot_understack.cli:app"

[project.urls]
Homepage = "https://github.com/rackerlabs/understack"
Issues = "https://github.com/rackerlabs/understack/issues"

[dependency-groups]
test = [
    "pytest<9",
    "pytest-github-actions-annotate-failures",
    "pytest-cov>=6.1.0",
]
[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["diff_nautobot_understack"]

[tool.hatch.build.targets.wheel]
include = ["diff_nautobot_understack"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../../"

[tool.ruff]
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
  "D",       # pydocstyle
  "E",       # pycodestyle (error)
  "F",       # pyflakes
  "B",       # flake8-bugbear
  "I",       # isort
  "S",       # flake8-bandit
  "UP",      # pyupgrade
  "ASYNC",   # flake8-async
]

ignore = [
    "D100",  # don't require docs for every module
    "D101",  # don't require docs for every class
    "D102",  # don't require docs for every class method
    "D103",  # don't require docs for every function
    "D104",  # don't require docs for every package
    "D106",  # don't require docs for every nested class
    "D107",  # don't require docs for __init__
    "D417"   # don't require docs for every function parameter
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
# enable the google doc style rules by default
convention = "google"

[tool.ruff.lint.per-file-ignores]
"diff_nautobot_understack/cli.py" = ["D415"]
