[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ironic-understack"
version = "0.0.0"
description = "Ironic hooks for Understack"
authors = ["Marek Skrobacki <marek.skrobacki@rackspace.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ironic_understack" }
]

[tool.poetry.dependencies]
# keep this python field in sync with the tool.ruff.target-version
python = "^3.10"
ironic = ">=24.1"
pyyaml = "^6.0"
understack-flavor-matcher = {path = "../understack-flavor-matcher"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "^6.0.0"

[tool.poetry.plugins."ironic.inspection.hooks"]
"resource-class" = "ironic_understack.resource_class:UndercloudResourceClassHook"

[tool.poetry.plugins."ironic.hardware.interfaces.inspect"]
"redfish-understack" = "ironic_understack.redfish_inspect_understack:UnderstackRedfishInspect"
"idrac-redfish-understack" = "ironic_understack.redfish_inspect_understack:UnderstackDracRedfishInspect"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=ironic_understack"
testpaths = [
    "tests",
]

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"ironic_understack/tests/*.py" = [
    "S101",     # allow 'assert' for pytest
]
