[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironic-understack"
version = "0.0.0"
description = "Ironic hooks for Understack"
authors = [{ name = "Marek Skrobacki", email = "marek.skrobacki@rackspace.co.uk" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "ironic>=32.0,<33",
    "pyyaml~=6.0",
    "understack-flavor-matcher",
]

[project.entry-points."ironic.inspection.hooks"]
resource-class = "ironic_understack.resource_class:ResourceClassHook"
update-baremetal-port = "ironic_understack.inspect_hook_update_baremetal_ports:InspectHookUpdateBaremetalPorts"
port-bios-name = "ironic_understack.port_bios_name_hook:PortBiosNameHook"
node-name-check = "ironic_understack.inspect_hook_node_name_check:InspectHookNodeNameCheck"
chassis_model = "ironic_understack.inspect_hook_chassis_model:InspectHookChassisModel"

[project.entry-points."ironic.hardware.interfaces.inspect"]
redfish-understack = "ironic_understack.redfish_inspect_understack:UnderstackRedfishInspect"
idrac-redfish-understack = "ironic_understack.redfish_inspect_understack:UnderstackDracRedfishInspect"

[dependency-groups]
test = [
    "pytest>=9.0.1,<10",
    "pytest-cov>=7,<8",
    "pytest-github-actions-annotate-failures",
    "pytest-mock>=3.15.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
understack-flavor-matcher = { path = "../understack-flavor-matcher" }

[tool.hatch.build.targets.sdist]
include = ["ironic_understack"]

[tool.hatch.build.targets.wheel]
include = ["ironic_understack"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=ironic_understack"
testpaths = [
    "tests",
]

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"ironic_understack/tests/*.py" = [
    "S101",     # allow 'assert' for pytest
]
