[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "neutron-understack"
version = "0.1.0"
description = "Undercloud's ML2 driver for neutron"
authors = ["Understack Developers"]
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: OpenStack",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
# keep this python field in sync with the tool.ruff.target-version
python = "^3.10"
requests = "^2"
neutron-lib = "^3"
neutron = "^25"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"neutron_understack/tests/*.py" = [
    "S311",     # allow non-cryptographic secure bits for test data
    "S101",
]

[tool.poetry.plugins."neutron.ml2.mechanism_drivers"]
understack = "neutron_understack.neutron_understack_mech:UnderstackDriver"

[tool.poetry.plugins."neutron.ml2.type_drivers"]
understack_vxlan = "neutron_understack.type_understack_vxlan:UnderstackVxlanTypeDriver"

[tool.poetry.plugins."neutron.service_plugins"]
l3_service_cisco_asa = "neutron_understack.l3_service_cisco_asa:CiscoAsa"
