[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neutron-understack"
version = "0.1.0"
description = "Undercloud's ML2 driver for neutron"
authors = [{ name = "Understack Developers" }]
requires-python = "~=3.10.0"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: OpenStack",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests>=2,<3",
    "neutron-lib>=3,<4",
    "neutron>=27,<28",
    "urllib3==1.26.20",
]

[project.entry-points."neutron.ml2.mechanism_drivers"]
understack = "neutron_understack.neutron_understack_mech:UnderstackDriver"

[project.entry-points."neutron.ml2.type_drivers"]
understack_vxlan = "neutron_understack.type_understack_vxlan:UnderstackVxlanTypeDriver"

[project.entry-points."neutron.service_plugins"]
l3_service_cisco_asa = "neutron_understack.l3_service_cisco_asa:CiscoAsa"

[project.urls]
Source = "https://github.com/rackerlabs/understack"

[dependency-groups]
test = [
    "pytest>=9.0.1,<10",
    "pytest-cov>=7,<8",
    "pytest-mock>=3.14.0,<4",
]

[tool.uv]
default-groups = ["test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"neutron_understack/tests/*.py" = [
    "S311",     # allow non-cryptographic secure bits for test data
    "S101",
]
