[metadata]
name = neutron-understack
author = Rackspace Technology
author_email = micah.culpepper@rackspace.com
home_page = https://github.com/rackerlabs/understack
summary = Understack ML2 Neutron Driver
python_requires = >=3.10
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


description_file =
    README.rst

[options]
install_requires =
    neutron-lib==3.*

packages = find:


[options.entry_points]
neutron.ml2.mechanism_drivers =
    understack = neutron_understack.neutron_understack_mech:UnderstackDriver
