[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "understack-flavor-matcher"
version = "0.0.0"
description = "Baremetal node flavor classifier"
authors = ["Marek Skrobacki <marek.skrobacki@rackspace.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "flavor_matcher" }
]

[tool.poetry.dependencies]
# keep this python field in sync with the tool.ruff.target-version
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=flavor_matcher"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "D",       # pydocstyle
  "E",       # pycodestyle (error)
  "F",       # pyflakes
  "B",       # flake8-bugbear
  "I",       # isort
  "S",       # flake8-bandit
  "UP",      # pyupgrade
  "ASYNC",   # flake8-async
]

ignore = [
    "D100",  # don't require docs for every module
    "D101",  # don't require docs for every class
    "D102",  # don't require docs for every class method
    "D103",  # don't require docs for every function
    "D104",  # don't require docs for every package
    "D106",  # don't require docs for every nested class
    "D107",  # don't require docs for __init__
    "D417"   # don't require docs for every function parameter
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
# enable the google doc style rules by default
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # allow 'assert' for pytest
]
