[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "understack-flavor-matcher"
version = "0.0.0"
description = "Baremetal node flavor classifier"
authors = ["Marek Skrobacki <marek.skrobacki@rackspace.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "flavor_matcher" }
]

[tool.poetry.dependencies]
# keep this python field in sync with the tool.ruff.target-version
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=flavor_matcher"
testpaths = [
    "tests",
]

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # allow 'assert' for pytest
]
