[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "understack-flavor-matcher"
version = "0.0.0"
description = "Baremetal node flavor classifier"
authors = [{ name = "Marek Skrobacki", email = "marek.skrobacki@rackspace.co.uk" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["pyyaml~=6.0"]

[dependency-groups]
test = [
    "pytest>=8.3.2,<9",
    "pytest-github-actions-annotate-failures",
    "pytest-cov>=5.0.0,<6",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["flavor_matcher"]

[tool.hatch.build.targets.wheel]
include = ["flavor_matcher"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=flavor_matcher"
testpaths = [
    "tests",
]

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # allow 'assert' for pytest
]
