[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "understack-workflows"
version = "0.0.0"
description = "The glue between different systems and services that are run in our Workflows"
authors = [{ name = "Understack Developers" }]
requires-python = "~=3.11.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: OpenStack",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pydantic>=2,<3",
    "pynautobot>=2.2.1,<3",
    "python-ironicclient>=5,<6",
    "sushy>=5.3.0,<6",
    "kubernetes==33.1.0",
    "understack-flavor-matcher",
    "netapp-ontap>=9.17.1.0",
]

[project.scripts]
sync-keystone = "understack_workflows.main.sync_keystone:main"
sync-provision-state = "understack_workflows.main.sync_provision_state:main"
undersync-switch = "understack_workflows.main.undersync_switch:main"
undersync-device = "understack_workflows.main.undersync_device:main"
enroll-server = "understack_workflows.main.enroll_server:main"
bmc-password = "understack_workflows.main.print_bmc_password:main"
bmc-kube-password = "understack_workflows.main.bmc_display_password:main"
sync-network-segment-range = "understack_workflows.main.sync_ucvni_group_range:main"
openstack-oslo-event = "understack_workflows.main.openstack_oslo_event:main"
netapp-create-svm = "understack_workflows.main.netapp_create_svm:main"
netapp-configure-interfaces = "understack_workflows.main.netapp_configure_net:main"

[dependency-groups]
test = [
    "pytest>=8,<9",
    "pytest-github-actions-annotate-failures",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "pytest-lazy-fixtures>=1.1.1,<2",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
understack-flavor-matcher = { path = "../understack-flavor-matcher" }

[tool.hatch.build.targets.sdist]
include = ["understack_workflows"]

[tool.hatch.build.targets.wheel]
include = ["understack_workflows"]

[tool.peotry.group.test]
optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=understack_workflows"
testpaths = [
    "tests",
]
filterwarnings = [
  # sushy
  "ignore:pkg_resources is deprecated as an API.:DeprecationWarning",
  # netapp
  "ignore:.*Number` field should not be instantiated.*"
]

[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"understack_workflows/nautobot_device.py" = ["UP031"]
"tests/test_nautobot_event_parser.py" = ["E501"]
"tests/test_bmc_credentials.py" = ["B017"]
"tests/**/*.py" = [
    "S101",     # allow 'assert' for pytest
    "S105",     # allow hardcoded passwords for testing
    "S106",     # allow hardcoded passwords for testing
]
"understack_workflows/main/bmc_display_password.py" = [
    "S607",     # allow the kubectl call
]
