[metadata]
name = understack-hardware-manager
author = Marek Skrobacki
author-email = marek.skrobacki@rackspace.co.uk
summary = IPA Hardware Manager: custom steps
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[files]
modules =
    understack_hwm

[entry_points]
ironic_python_agent.hardware_managers =
    understack_hwm = understack_hwm.hardware_manager:UnderstackHardwareManager
